--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="35dp"
         android:layout_height="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="65dp"
         android:src="@drawable/backicon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -94,6 +94,7 @@
         android:fontFamily="@font/poppinsmedium"
         android:text="Following"
         android:paddingTop="7dp"
+        android:textColor="@color/btnColor"
         android:textSize="18sp"
         app:cornerRadius="13dp"
         app:layout_constraintBottom_toBottomOf="@id/publisherLogo"
@@ -275,7 +276,7 @@
         android:layout_width="27dp"
         android:layout_height="27dp"
         android:layout_marginRight="60dp"
-        android:src="@drawable/baseline_bookmark_border_24"
+        android:src="@drawable/bookmarkicon"
         app:layout_constraintBottom_toBottomOf="@id/commentCount"
         app:layout_constraintRight_toRightOf="@id/socialBar"
         app:layout_constraintTop_toTopOf="@id/commentCount">
