--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -105,7 +105,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:inputType="textEmailAddress"
             android:paddingLeft="15dp"
-            android:textColor="#4E4B66"
+            android:textColor="@color/gray"
             android:textSize="16sp"
 
             >
@@ -182,7 +182,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:inputType="textPassword"
             android:paddingLeft="15dp"
-            android:textColor="#4E4B66"
+            android:textColor="@color/gray"
             android:textSize="16dp"
 
             >
@@ -330,6 +330,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:paddingTop="10dp"
             android:text="Login"
+            android:textColor="@color/btnColor"
             android:textSize="16sp">
 
         </Button>
