--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -214,6 +214,7 @@
         android:layout_marginRight="10dp"
         android:backgroundTint="@color/primary_blue"
         android:text="@string/edit_profile"
+        android:textColor="@color/btnColor"
         android:textSize="17sp"
         app:cornerRadius="16dp"
         app:layout_constraintLeft_toLeftOf="@id/bio"
@@ -232,6 +233,7 @@
         android:layout_marginRight="20dp"
         android:backgroundTint="@color/primary_blue"
         android:text="@string/website"
+        android:textColor="@color/btnColor"
         android:textSize="17sp"
         app:cornerRadius="16dp"
         app:layout_constraintLeft_toRightOf="@id/editProfileBtn"
