--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -104,7 +104,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:inputType="textEmailAddress"
             android:paddingLeft="15dp"
-            android:textColor="#4E4B66"
+            android:textColor="@color/gray"
             android:textSize="16sp"
 
             >
@@ -179,7 +179,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:inputType="textPassword"
             android:paddingLeft="15dp"
-            android:textColor="#4E4B66"
+            android:textColor="@color/gray"
             android:textSize="16sp"
 
             >
@@ -305,7 +305,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:inputType="textPassword"
             android:paddingLeft="15dp"
-            android:textColor="#4E4B66"
+            android:textColor="@color/gray"
             android:textSize="16sp"
 
             >
@@ -426,6 +426,7 @@
             android:background="#00000000"
             android:fontFamily="@font/poppinsmedium"
             android:paddingTop="10dp"
+            android:textColor="@color/btnColor"
             android:text="Signup"
             android:textSize="16sp">
 
