--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -11,11 +11,11 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/backIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="35dp"
+        android:layout_height="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="80dp"
-        android:src="@drawable/arrowleft"
+        android:src="@drawable/backicon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
