--- a/app/src/main/res/layout/popup_menu.xml
+++ b/app/src/main/res/layout/popup_menu.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:textColor="@color/black"
+            android:textColor="@color/deleteColor"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="3dp"
              app:layout_constraintLeft_toRightOf="@id/deleteIcon"
