--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="stroke_color">#000000</color>
+    <color name="btnColor">#FFFFFFFF</color>
+    <color name="deleteColor">#FF000000</color>
+    <color name="error_bg_color">#FFF3F8</color>
     <color name="transparent">#00000000</color>
     <color name="gray">#4E4B66</color>
+    <color name="app_background">#FFFFFFFF</color>
     <color name="text_color">#A0A3BD</color>
     <color name="primary_blue">#1877F2</color>
     <color name="second_btn_color">#EEF1F4</color>
